fix/Recommend and swagger
